Prioritize index.php over index.html so extracting SI to web root will just 'work'

--- a/apache/conf/httpd.conf.template
+++ b/apache/conf/httpd.conf.template
@@ -238,7 +238,7 @@ DocumentRoot "!TEAMMCPATH!\www"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html index.php
+    DirectoryIndex index.php index.html 
 </IfModule>
 
 #
